--- a/MyCity4Kids/MyCity4Kids/res/layout/user_collection_item_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_collection_item_activity.xml
@@ -4,11 +4,13 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+
     android:background="@android:color/background_light">
 
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
+        android:id="@+id/appBar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -17,105 +19,112 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/app_red"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
-            <RelativeLayout
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <androidx.appcompat.widget.Toolbar
+                android:layout_height="?attr/actionBarSize"
+                android:elevation="5dp"
+                app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:theme="@style/ToolbarTheme"
+                app:titleTextAppearance="@style/ToolbarTheme.Title">
+
+                <RelativeLayout
+                    android:id="@+id/upperToolbarHeader"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:elevation="5dp"
-                    app:layout_collapseMode="pin"
-                    app:theme="@style/ToolbarTheme"
-                    app:titleTextAppearance="@style/ToolbarTheme.Title">
+                    android:layout_marginStart="@dimen/space_10"
+                    android:visibility="visible"
+                    app:layout_collapseMode="pin">
 
-                    <RelativeLayout
-                        android:id="@+id/upperToolbarHeader"
-                        android:layout_width="match_parent"
+
+                    <LinearLayout
+                        android:id="@+id/linearLayoutForFollowingShare"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/space_10"
-                        android:visibility="visible">
-
-
-                        <LinearLayout
-                            android:id="@+id/linearLayoutForFollowingShare"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginEnd="@dimen/space_10"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
-
-                            <com.mycity4kids.widget.CustomFontTextView
-                                android:id="@+id/followFollowingTextView"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginRight="@dimen/space_10"
-                                android:background="@drawable/rootlayout_rounded_corner_with_transparent_background"
-                                android:paddingLeft="@dimen/space_10"
-                                android:paddingTop="@dimen/space_5"
-                                android:paddingRight="@dimen/space_10"
-                                android:paddingBottom="@dimen/space_5"
-                                android:text="Following"
-                                android:textColor="@color/white"
-                                android:textSize="12sp"
-                                android:visibility="gone"
-                                app:fontName="Helvetica Bold.ttf" />
-
-                            <androidx.appcompat.widget.AppCompatImageView
-                                android:id="@+id/share"
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:padding="@dimen/space_16"
-                                android:src="@drawable/sharee"
-                                android:tint="@color/white" />
-
-                            <androidx.appcompat.widget.AppCompatImageView
-                                android:id="@+id/setting"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:padding="@dimen/space_15"
-                                android:src="@drawable/ic_more"
-                                android:tint="@color/white" />
-
-
-                        </LinearLayout>
-
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/space_5"
+                        android:layout_marginEnd="@dimen/space_10"
+                        android:orientation="horizontal">
 
                         <com.mycity4kids.widget.CustomFontTextView
-                            android:id="@+id/collectionNameTextView"
+                            android:id="@+id/followFollowingTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="@dimen/space_5"
-                            android:layout_toStartOf="@+id/linearLayoutForFollowingShare"
-                            android:layout_toEndOf="@id/back"
-                            android:ellipsize="marquee"
-                            android:focusable="true"
-                            android:focusableInTouchMode="true"
-                            android:marqueeRepeatLimit="marquee_forever"
-                            android:scrollHorizontally="true"
-                            android:singleLine="true"
-                            android:text="My top blogs"
-                            android:textAllCaps="true"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginRight="@dimen/space_10"
+                            android:background="@drawable/rootlayout_rounded_corner_with_transparent_background"
+                            android:paddingLeft="@dimen/space_10"
+                            android:paddingTop="@dimen/space_5"
+                            android:paddingRight="@dimen/space_10"
+                            android:paddingBottom="@dimen/space_5"
+                            android:text="Following"
                             android:textColor="@color/white"
-                            android:textSize="@dimen/space_18"
+                            android:textSize="12sp"
+                            android:visibility="gone"
                             app:fontName="Helvetica Bold.ttf" />
 
                         <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/back"
+                            android:id="@+id/share"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:padding="@dimen/space_16"
+                            android:src="@drawable/sharee"
+                            android:tint="@color/white" />
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:id="@+id/setting"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentStart="true"
-                            android:layout_centerVertical="true"
-                            android:src="@drawable/back_arroow" />
+                            android:padding="@dimen/space_15"
+                            android:src="@drawable/ic_more"
+                            android:tint="@color/white" />
 
 
-                    </RelativeLayout>
-                </androidx.appcompat.widget.Toolbar>
+                    </LinearLayout>
+
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/collectionNameTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/space_5"
+                        android:layout_toStartOf="@+id/linearLayoutForFollowingShare"
+                        android:layout_toEndOf="@id/back"
+                        android:ellipsize="marquee"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:scrollHorizontally="true"
+                        android:singleLine="true"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/space_18"
+                        app:fontName="Helvetica Bold.ttf" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/back"
+                        android:layout_width="@dimen/space_50"
+                        android:layout_height="@dimen/space_50"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:padding="@dimen/space_10"
+                        android:src="@drawable/back_arroow" />
+
+
+                </RelativeLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
+            <RelativeLayout
+                android:id="@+id/titleHeaderRelativeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -123,12 +132,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/desert" />
+                    android:src="@drawable/default_article" />
+
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:background="#40000000" />
+                    android:background="#80000000" />
 
 
                 <RelativeLayout
@@ -146,9 +156,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:gravity="center_vertical"
-                        android:text="121"
                         android:textColor="@color/white"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
                         app:fontName="OpenSans-Bold.ttf" />
 
                     <com.mycity4kids.widget.CustomFontTextView
@@ -161,7 +170,7 @@
                         android:drawableRight="@drawable/arrow_right"
                         android:drawableTint="@color/white"
                         android:gravity="center_vertical"
-                        android:text="Follower"
+                        android:text="@string/myprofile.followers_label"
                         android:textColor="@color/white"
                         android:textSize="12sp"
                         app:fontName="open_sans.ttf" />
@@ -182,34 +191,75 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:text="visible to all"
+                        android:text="@string/visible_to_all"
                         android:textColor="@color/white"
                         android:textSize="14sp"
                         app:switchPadding="@dimen/space_10" />
                 </RelativeLayout>
+
+
             </RelativeLayout>
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-
 
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/collectionItemRecyclerView"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:layout_margin="@dimen/space_5"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:visibility="visible"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/descriptionTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/space_10"
+                android:text="@string/campaign_discription"
+                android:textColor="@color/campaign_515151"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/collectionDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/descriptionTextView"
+                android:layout_marginStart="@dimen/space_16"
+                android:layout_marginEnd="@dimen/space_16"
+                android:background="@drawable/about_user_bg"
+                android:gravity="center_vertical"
+                android:padding="@dimen/space_16"
+                android:textColor="@color/app_light_black"
+                android:textSize="14sp"
+                android:visibility="gone" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/collectionItemRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/collectionDescription"
+                android:layout_marginStart="@dimen/space_5"
+                android:layout_marginEnd="@dimen/space_5"
+                android:layout_marginBottom="@dimen/space_5"
+                android:nestedScrollingEnabled="false" />
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/itemNotAddedTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="you haven't added any item yet"
+        android:layout_gravity="center"
+        android:text="@string/no_collection_items"
         android:textColor="@color/black"
         android:visibility="gone" />
 
@@ -219,7 +269,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:visibility="gone"
+        android:visibility="visible"
         app:duration="1000">
 
         <LinearLayout
@@ -236,6 +286,25 @@
         </LinearLayout>
 
     </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <FrameLayout
+        android:id="@+id/deleteCollectionMainLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/transparent_black_90"
+        android:clickable="false"
+        android:visibility="gone">
+
+        <include
+            android:id="@+id/includeDeleteCollectionLayout"
+            layout="@layout/delete_collection_confirm_pop_up"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/space_16"
+            android:layout_marginEnd="@dimen/space_16" />
+    </FrameLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
