--- a/MyCity4Kids/MyCity4Kids/res/layout/video_challenge_detail_listing_header.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_challenge_detail_listing_header.xml
@@ -27,8 +27,7 @@
                 android:id="@+id/exoplayerChallengeDetailListing"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                />
+                android:gravity="center" />
 
         </FrameLayout>
 
