--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_listing_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_listing_adapter.xml
@@ -71,6 +71,12 @@
             </LinearLayout>
         </RelativeLayout>
 
+        <com.mycity4kids.widget.StoryShareCardWidget
+            android:id="@+id/storyShareCardWidget"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
         <RelativeLayout
             android:id="@+id/rootView"
             android:layout_width="match_parent"
@@ -79,7 +85,7 @@
             android:visibility="gone">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/storyImageView"
+                android:id="@+id/storyImageView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
@@ -90,7 +96,7 @@
                 android:id="@+id/followAuthorRelativeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/storyImageView"
+                android:layout_below="@+id/storyImageView1"
                 android:layout_marginEnd="@dimen/space_10">
 
                 <com.mycity4kids.widget.CustomFontTextView
@@ -99,7 +105,6 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:padding="14dp"
-                    android:text="Abhinav"
                     android:textColor="#465391"
                     android:textSize="16sp"
                     android:textStyle="bold" />
