--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_card_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_card_activity.xml
@@ -89,15 +89,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
-                android:textSize="13sp"
-                android:textStyle="bold" />
+                android:textSize="13sp" />
 
-            <View
+            <!--<LinearLayout
                 android:id="@+id/divider"
                 android:layout_width="@dimen/space_80"
                 android:layout_height="@dimen/space_2"
                 android:layout_marginTop="@dimen/space_10"
-                android:background="@drawable/white_filled_bg" />
+                android:background="@color/white"
+                android:orientation="horizontal" />-->
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="@dimen/space_80"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/space_10"
+                android:background="@color/white" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/short_text"
@@ -105,8 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/space_10"
                 android:textColor="#FFFFFF"
-                android:textSize="11sp"
-                android:textStyle="bold" />
+                android:textSize="11sp" />
         </LinearLayout>
         <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
     </RelativeLayout>
