--- a/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topic_listing_activity.xml
@@ -34,24 +34,24 @@
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
 
-            <com.mycity4kids.widget.CustomFontTextView
+            <ImageView
                 android:id="@+id/imageSortBy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/space_10"
-                android:background="@drawable/campaign_border_round_rectangular_layout"
-                android:drawableRight="@drawable/downarrow"
-                android:drawablePadding="@dimen/space_10"
-                android:drawableTint="@color/grey"
-                android:paddingLeft="@dimen/space_15"
-                android:paddingTop="@dimen/space_5"
-                android:paddingEnd="@dimen/space_15"
-                android:paddingBottom="@dimen/space_5"
-                android:text="Sort By"
-                android:textColor="#9B9B9B"
-                android:textSize="@dimen/space_16" />
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:paddingLeft="@dimen/space_20"
+                android:paddingTop="16dp"
+                android:paddingRight="@dimen/space_20"
+                android:paddingBottom="16dp"
+                android:src="@drawable/ic_flip"
+                android:tint="@color/greytxt_color"
+                android:visibility="visible" />
         </RelativeLayout>
 
     </androidx.appcompat.widget.Toolbar>
