--- a/MyCity4Kids/MyCity4Kids/res/menu/choose_short_story_menu.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/choose_short_story_menu.xml
@@ -9,10 +9,12 @@
         android:icon="@drawable/ic_profile_bookmark"
         android:title="@string/ad.bottom_bar.bookmark"
         android:visible="false" />
-
     <item
         android:id="@+id/reportContentShortStory"
         android:icon="@drawable/ic_report"
         android:title="@string/all_report_content" />
-
+    <item
+        android:id="@+id/copyLink"
+        android:icon="@drawable/ic_link"
+        android:title="@string/all_copy_link" />
 </menu>
