--- a/MyCity4Kids/MyCity4Kids/res/layout/horizontal_recycler_view_video_challenge.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/horizontal_recycler_view_video_challenge.xml
@@ -7,7 +7,7 @@
     android:layout_marginRight="12dp"
     android:layout_marginBottom="10dp"
     android:elevation="0dp"
-    app:cardCornerRadius="3dp"
+    app:cardCornerRadius="4dp"
     app:cardElevation="0dp">
 
     <RelativeLayout
@@ -24,7 +24,7 @@
 
             <ImageView
                 android:id="@+id/tagImageView"
-                android:layout_width="260dp"
+                android:layout_width="236dp"
                 android:layout_height="160dp"
                 android:foreground="@drawable/gradient_in_video_challenge_image"
                 android:scaleType="centerCrop"
@@ -40,14 +40,14 @@
                 android:background="@drawable/border_live_text_on_image_video_challenge"
                 android:elevation="4dp"
                 android:paddingLeft="10dp"
-                android:paddingTop="3dp"
+                android:paddingTop="4dp"
                 android:paddingRight="10dp"
-                android:paddingBottom="3dp"
+                android:paddingBottom="4dp"
                 android:text="@string/video_challenge_live_text"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:visibility="gone"
-                app:fontName="oswald.ttf" />
+                app:fontName="Oswald-Medium.ttf" />
 
             <ImageView
                 android:id="@+id/info"
