--- a/app/src/main/res/layout/blogger_gold_about_fragment.xml
+++ b/app/src/main/res/layout/blogger_gold_about_fragment.xml
@@ -18,20 +18,111 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/space_20"
-      android:layout_marginTop="@dimen/space_25"
+      android:layout_marginTop="@dimen/space_10"
       android:layout_marginRight="@dimen/space_20"
       android:text="@string/blogger_gold_about_text"
       android:textColor="@color/campaign_515151"
       android:textSize="16sp" />
 
     <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/blogger_gold_about_text1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="@dimen/space_20"
+      android:layout_marginTop="@dimen/space_10"
+      android:layout_marginRight="@dimen/space_20"
+      android:text="@string/blogger_gold_about_text1"
+      android:textColor="@color/campaign_515151"
+      android:textSize="16sp" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/blogger_gold_about_text2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="@dimen/space_20"
+      android:layout_marginTop="@dimen/space_10"
+      android:layout_marginRight="@dimen/space_20"
+      android:text="@string/blogger_gold_about_text2"
+      android:textColor="@color/campaign_515151"
+      android:textSize="16sp" />
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:background="@drawable/leaderboard_about_bg"
+      android:padding="@dimen/space_5"
+      android:layout_marginLeft="@dimen/space_20"
+      android:layout_marginTop="@dimen/space_10"
+      android:layout_marginRight="@dimen/space_20">
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/blogger_gold_about_text3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/blogger_gold_about_text3"
+        android:textColor="@color/campaign_515151"
+        android:textSize="16sp" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/blogger_gold_about_text4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_10"
+        android:text="@string/blogger_gold_about_text4"
+        android:textColor="@color/campaign_515151"
+        android:textSize="16sp" />
+
+      <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/blogger_gold_about_text5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/space_10"
+        android:text="@string/blogger_gold_about_text5"
+        android:textColor="@color/campaign_515151"
+        android:textSize="16sp" />
+    </LinearLayout>
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/blogger_gold_about_text6"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="@dimen/space_20"
+      android:layout_marginTop="@dimen/space_10"
+      android:layout_marginRight="@dimen/space_20"
+      android:text="@string/blogger_gold_about_text6"
+      android:textColor="@color/campaign_515151"
+      android:textSize="16sp" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/blogger_gold_about_text7"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="@dimen/space_20"
+      android:layout_marginTop="@dimen/space_10"
+      android:layout_marginRight="@dimen/space_20"
+      android:text="@string/blogger_gold_about_text7"
+      android:textColor="@color/campaign_list_buttons"
+      android:textSize="16sp" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+      android:id="@+id/blogger_gold_about_text8"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="@dimen/space_20"
+      android:layout_marginTop="@dimen/space_10"
+      android:layout_marginRight="@dimen/space_20"
+      android:text="@string/blogger_gold_about_text8"
+      android:textColor="@color/campaign_515151"
+      android:textSize="16sp" />
+
+    <!--<com.mycity4kids.widget.CustomFontTextView
       android:id="@+id/webview_know_more"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="@dimen/space_20"
       android:text="@string/webview_know_more"
       android:textColor="@color/campaign_list_buttons"
-      android:textSize="14sp" />
+      android:textSize="14sp" />-->
 
     <com.mycity4kids.widget.CustomFontTextView
       android:id="@+id/webview_hack"
